Remove personal creds from Pi example config

--- a/pi/soltaro.env.example
+++ b/pi/soltaro.env.example
@@ -1,6 +1,6 @@
 # Qendercore credentials
-SOLTARO_USERNAME=kevintee@mac.com
-SOLTARO_PASSWORD=REPLACE_ME
+SOLTARO_USERNAME=YOUR_EMAIL_HERE
+SOLTARO_PASSWORD=YOUR_PASSWORD_HERE
 
 # Inverter to read (active)
 SOLTARO_HWID=644fc8f0-2a4b-4867-9ce4-b6af0b778fb4
@@ -12,9 +12,9 @@ SOLTARO_POLL_SECONDS=300
 SOLTARO_INSECURE_TLS=true
 
 # Local token state file (refresh token rotation)
-SOLTARO_STATE_FILE=/home/jarvis/.soltaro-qendercore-state.json
+SOLTARO_STATE_FILE=/home/pi/.soltaro-qendercore-state.json
 
 # Hubitat Maker API
-HUBITAT_MAKER_BASE_URL=http://192.168.1.54/apps/api/0000
-HUBITAT_MAKER_TOKEN=REPLACE_ME
-HUBITAT_DEVICE_ID=REPLACE_WITH_VIRTUAL_DEVICE_ID
+HUBITAT_MAKER_BASE_URL=http://HUBITAT_IP/apps/api/MAKER_APP_ID
+HUBITAT_MAKER_TOKEN=YOUR_MAKER_API_TOKEN
+HUBITAT_DEVICE_ID=YOUR_VIRTUAL_DEVICE_ID
