Remove default inverter HWID; require user to discover

--- a/pi/soltaro.env.example
+++ b/pi/soltaro.env.example
@@ -2,8 +2,9 @@
 SOLTARO_USERNAME=YOUR_EMAIL_HERE
 SOLTARO_PASSWORD=YOUR_PASSWORD_HERE
 
-# Inverter to read (active)
-SOLTARO_HWID=644fc8f0-2a4b-4867-9ce4-b6af0b778fb4
+# Inverter to read (HWID). Find yours by running:
+#   python3 soltaro_sync.py list-inverters --env ./soltaro.env
+SOLTARO_HWID=
 
 # Poll interval (seconds)
 SOLTARO_POLL_SECONDS=300
